--- a/templates/room.html
+++ b/templates/room.html
@@ -4,28 +4,28 @@
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="SubliveはSublime Textを使って、簡単にだれでもライブコーディングができるサイトです。">
-    <meta property="og:title" content="Sublive">
+    <meta property="og:title" content="Sublive!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
-    <meta property="og:url" content="http://www.google.com/">
-    <meta property="og:description" content="Sublive">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="Sublive!">
     <meta property="og:site_name" content="">
     <!--ie setting-->
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <!--title-->
-    <title>Sublive</title>
+    <title>Sublive!</title>
     <!--favicon-->
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/favicon.ico">
     <!--font play-->
     <link href="http://fonts.googleapis.com/css?family=Play" rel="stylesheet" type="text/css">
     <!--time stamp-->
     <!--style sheets-->
-    <link href="css/style.css?1403036638205" rel="stylesheet">
+    <link href="css/style.css?1403038002031" rel="stylesheet">
     <!--scripts-->
     <script src="js/lib/html5shiv.min.js"></script>
     <script src="js/lib/jquery-1.11.0.min.js"></script>
     <script src="http://cdn.peerjs.com/0.3/peer.js"></script>
-    <script src="js/app.js?1403036638205"></script>
+    <script src="js/app.js?1403038002031"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
   <body>
